test/plex-server/templates/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-plex
  namespace: plex-server
spec:
  type: ClusterIP
  selector:
    component: deployment-plex-server
  ports:
  - port: 32400
    protocol: TCP
    targetPort: 32400
